Python: calling id_properties_ui(key).update() without arguments, crashes blender #92532

Closed
opened 2021-10-27 13:39:28 +02:00 by Ovionis · 12 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: 8d8ce64435

Short description of error
Apparently the old method of editing custom property defaults, via a custom property named _RNA_UI, is no longer valid, and now it's done via a function of a function.
When calling this second function (update), without specifying any arguments, blender will just crash.

Exact steps for others to reproduce the error
The following script will run except the last line:

import bpy

ob = bpy.context.object
ob['custom_prop'] = 1

rna = ob.id_properties_ui('custom_prop')
rna.update(description="This will work")

rna.update()  # This will not work

The second part of this sub-function (I believe is used to copy the ui to other things), will also crash albeit if you send it to itself, I guess. Example:

import bpy

ob = bpy.context.object
ob['custom_prop'] = None

rna = ob.id_properties_ui('custom_prop')
rna.update_from(rna)

I'm not sure if this is also bug, or just bad user input-loop, like while True: continue

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 23:24, hash: `8d8ce64435` **Short description of error** Apparently the old method of editing custom property defaults, via a custom property named `_RNA_UI`, is no longer valid, and now it's done via a function of a function. When calling this second function (update), without specifying any arguments, blender will just crash. **Exact steps for others to reproduce the error** The following script will run except the last line: ``` import bpy ob = bpy.context.object ob['custom_prop'] = 1 rna = ob.id_properties_ui('custom_prop') rna.update(description="This will work") rna.update() # This will not work ``` The second part of this sub-function (I believe is used to copy the ui to other things), will also crash albeit if you send it to itself, I guess. Example: ``` import bpy ob = bpy.context.object ob['custom_prop'] = None rna = ob.id_properties_ui('custom_prop') rna.update_from(rna) ``` I'm not sure if this is also bug, or just bad user input-loop, like `while True: continue`
Author

Added subscriber: @Phigon

Added subscriber: @Phigon

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with the current development versions of Blender.

But I had to edit the script to resolve this error:

SyntaxError: unexpected EOF while parsing
Traceback (most recent call last):
  File "/Text", line 6, in <module>
TypeError: ui_data() takes exactly 1 argument (0 given)
Error: Python script failed, check the message in the system console

Please try the latest daily build: https://builder.blender.org/download/

If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

I cannot reproduce this with the current development versions of Blender. But I had to edit the script to resolve this error: ``` SyntaxError: unexpected EOF while parsing Traceback (most recent call last): File "/Text", line 6, in <module> TypeError: ui_data() takes exactly 1 argument (0 given) Error: Python script failed, check the message in the system console ``` Please try the latest daily build: https://builder.blender.org/download/ If the problem persists, please give us more clear instructions on how to reproduce it from scratch.
Author

None works, and I forget to add the attribute into the code.
The second part already worked.

Both codes now successfully crash.

I don't know if it's only None that doesn't crash or it's only int that does crash, just that it crashes.

`None` works, and I forget to add the attribute into the code. The second part already worked. Both codes now successfully crash. I don't know if it's only `None` that doesn't crash or it's only `int` that does crash, just that it crashes.

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Thanks for the report, I can confirm.
8b9a3b94 introduced many changes in this area. There is a chance that it introduced the bug.
@HooglyBoogly, mind checking?

Thanks for the report, I can confirm. 8b9a3b94 introduced many changes in this area. There is a chance that it introduced the bug. @HooglyBoogly, mind checking?
Member

Removed subscriber: @HooglyBoogly

Removed subscriber: @HooglyBoogly
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-10-28 21:17:31 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by efcf36f2e9

This issue was referenced by efcf36f2e9773f30fa6d4cce8fd0e793b9694b78
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92532
No description provided.